--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>3.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-tdb</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.yaml</groupId>
